<resources>
    <string name="app_name">Hackathon</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="description_of_the_image">Logo Safe Sky</string>
    <string name="name">Name</string>
    <string name="county">County</string>
    <string name="password_confirm">Password confirm</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="enter_something">Enter something</string>
</resources>